--- a/server/package.json
+++ b/server/package.json
@@ -15,8 +15,10 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.3.3",
     "nodemon": "^3.1.0",
+    "resend": "^3.2.0",
     "twilio": "^5.0.4"
   }
 }
