--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.3.3",
+    "nodemailer": "^6.9.13",
     "nodemon": "^3.1.0",
     "resend": "^3.2.0",
     "twilio": "^5.0.4"
